multiplication-algorithms/.svn/pristine/c0/c0143a3caec373e5a5e17ce91b938da347340062.svn-base
Naloga2.java:166: error: unclosed character literal
				tempResString = '0 ' + tempResString;
				                ^
Naloga2.java:166: error: unclosed character literal
				tempResString = '0 ' + tempResString;
				                   ^
Naloga2.java:166: error: not a statement
				tempResString = '0 ' + tempResString;
				                     ^
3 errors
